# healthy_habits_tracker

./: .env.sample  .flake8  Dockerfile  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
congig/: settings.py
custom_user/: admin.py  models.py  serializers.py  urls.py  user_manager.py  views.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/tests/: __init__.py  test_failed_habits_create.py  test_habit_list.py  test_habit_update.py  test_success_habits_create.py
